* Fixed layout problem where text in the login screen would be partially   placed behind the logo. [Guido]

--- a/themes/steelblue/styles/style.css
+++ b/themes/steelblue/styles/style.css
@@ -334,6 +334,11 @@ input.btn_saveandclose
 	margin-bottom: 8px;
 }
 
+#loginform-content
+{
+  width: 220px;
+}
+
 .loginformField
 {
 	vertical-align: middle;
